[package]
name = "sstable"
version = "0.1.0"
authors = ["yetone <yetoneful@gmail.com>"]
edition = "2018"

[lib]
name = "sstable"

[dependencies]
crc = "1.2"
integer-encoding = "1.0"
snap = "0.2"
cuckoofilter = { git = "https://github.com/seiflotfy/rust-cuckoofilter", tag = "v0.4.0" }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.2"
