[package]
name = "tomatodb-server"
version = "0.1.0"
authors = ["yetone <yetoneful@gmail.com>"]
edition = "2018"

[dependencies]
skip-list = { path = "../skip-list" }
sstable = { path = "../sstable" }
bytes = "0.4"
futures = "0.1.18"
tokio = "0.1.18"
tokio-io = "0.1.12"
tokio-proto = "0.1"
tokio-service = "0.1"
glob = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.1.2"
integer-encoding = "1.0"
snap = "0.2"
crc = "1.2"
memmap = "0.7.0"

[dev-dependencies]
rand = "0.6.1"
